Opened 14 years ago
Closed 14 years ago
#6499 closed bug (fixed)
getsubopt function missing from C library
Reported by: | augiedoggie | Owned by: | zooey |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/libroot.so | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The getsubopt function is missing from our C library. The source for this function was in our repository at one point and was removed for some reason during one of the locale merges.(Even when it was in the source tree I don't believe it was being included in the library)
the old version from our source
The header file has it inside an ifdef for XSI optional components but it appears to have been made part of the 'Base' posix spec the getsubopt spec page
Change History (3)
comment:1 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 14 years ago
Status: | assigned → in-progress |
---|
comment:3 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
getsubopt() has been added in hrev38650.
Note:
See TracTickets
for help on using tickets.
Looks like it was removed in hrev37725. re-assigning to Oliver.