Closing #6499: * add missing getsubopt() POSIX-function * added corresponding test

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38650 a95241bf-73f2-0310-859d-f6bbb57e9c96