headers/posix/stdlib.h
@@ -168,6 +168,9 @@ extern size_t	wcstombs(char *string, const wchar_t *pwcs, size_t maxSize);
 /* crypt */
 extern void 	setkey(const char *key);
 
+/* sub-option parsing */
+extern int		getsubopt(char **optionp, char * const *keylistp,
+					char **valuep);
 
 /* pty functions */
 extern int		posix_openpt(int openFlags);
